# goldengate-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: architecture.md  oracle_setup.sql
src/: config.py  server.py
src/agents/: __init__.py  aml_agent.py  fraud_agent.py  recon_agent.py
src/audit/: __init__.py  audit_log.py
src/auth/: __init__.py  rbac.py
src/db/: __init__.py  oracle_client.py  queries.py
src/schema/: __init__.py  mapper.py  schema_map.yaml
src/streaming/: __init__.py  kafka_consumer.py
src/tools/: __init__.py  common.py  read_tools.py  score_tools.py  write_tools.py
src/writeback/: __init__.py  circuit_breaker.py  rest_client.py
tests/: __init__.py  conftest.py  test_config.py  test_gl_position.py  test_kafka_consumer.py  test_open_alerts.py  test_read_tools.py  test_realtime_events.py  test_schema_mapper.py  test_score_tools.py  test_write_tools.py
tests/mocks/: __init__.py  mock_anthropic.py  mock_kafka.py  mock_oracle.py  mock_writeback.py
