[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goldengate-mcp"
version = "0.1.0"
description = "GoldenGate MCP Server — Real-Time Banking AI Layer"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.4",
    "python-oracledb>=2.0.0",  # install separately if not on PyPI mirror
    "pydantic>=2.10.0",
    "pydantic-settings>=2.10.1",
    "structlog>=24.4.0",
    "PyYAML>=6.0.2",
    "anthropic>=0.49.0",
    "confluent-kafka>=2.8.0",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
